# state_machine_simulator_py

./: bundle.py  pyproject.toml  task10.py  task11.py  task9.py  Задача 10.graphml  Задача 11.graphml  Задача 9.graphml
state_machine_sim/: cgml_signal.py  cgml_types.py  components.py  event_loop.py  orbita.py  qhsm.py  simple_parser.py  utils.py  xml_parser.py
tests/: TestImpulse.graphml  from_ide.graphml  test_all_demos.py  test_autocheck.py  test_autocheck_bundled.py  test_compatibility.py  test_demo.py  test_demo_run.py  test_impulse_run.py  test_print_reader_machine.py  test_print_state_machine.py  test_reader.graphml  test_run_reader_machine.py  test_simple_parser.py
